add project roulette

--- a/content/posts/leetcode-single/2000/2064.en.md
+++ b/content/posts/leetcode-single/2000/2064.en.md
@@ -2,17 +2,22 @@
 title: "2064. Minimized Maximum of Products Distributed to Any Store"
 date: 2021-11-07T08:43:43-08:00
 draft: false
-tags: ["binary search", "Leetcode"]
+tags: ["Binary Search", "Leetcode", "Algorithm"]
 math:
     enable: true
 ---
 Binary Search
+
 <!--more-->
+
 [2064. Minimized Maximum of Products Distributed to Any Store](https://leetcode.com/problems/minimized-maximum-of-products-distributed-to-any-store/)
+
 ## Problem
+
 Given a integer array containing m elements, we want to split the element to get a new array with n elements. The largest element of the new array is `maxn`, find the minimum value of `maxn`.
 
 ## Idea
+
 Binary Search
 
 Each element x in the original array needs to occupy $\lceil$x/maxn$\rceil$ positions in the split array. We use the binary search method to find maxn so that the number of positions in the split array is equal to n.
@@ -20,6 +25,7 @@ Each element x in the original array needs to occupy $\lceil$x/maxn$\rceil$ posi
 Left part makes the size of new array greater than n. Right part makes the size of new array smaller than n.
 
 ## Code
+
 ```C++
 class Solution {
 public:
